deployment/k8s_resources/ingresses/cluster-manager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-manager-ingress
  namespace: mapreduce
spec:
  ingressClassName: nginx
  rules:
    - host: api.minikube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cluster-manager
                port:
                  number: 8000
